--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: var(--font-primary) ;
-    background: url(assets/fall5.jpg) 100vw 100vh ;
+    background: url(assets/fall5.jpg) 100vw 100vh;
     background-size: cover;
     margin: 0;
     padding: 0;
@@ -21,13 +21,13 @@ body {
 .navbar {
     width: 150px;
     height: 150px;
-    line-height: 150px;
+    /* line-height: 150px; */
     border-radius: 50%;
     margin: 190px auto;
     position: relative;
     cursor: pointer;
     text-align: center;
-    font-size: 2.75rem;
+    font-size: 2rem;
     font-weight: bold;
     color: #05eb11b4;
     z-index: 5;
@@ -35,10 +35,17 @@ body {
 }
 
 
+.navbar h1{
+    /* background: red; */
+    padding-top: 0.5rem;
+    font-size: 2rem;
+}
+
 .navbar .menu {
     list-style: none;
     padding: 0;
     margin: 0;
+    /* background: red; */
     position: absolute;
     top: -75px;
     left: -75px;
@@ -79,7 +86,8 @@ body {
     font-size: 59%;
     color: white;
     transition: 0.7s;
-    box-shadow: 0 25px 60px  rgba(31, 228, 90, 0.8);
+    box-shadow: 0 25px 60px  #20ff63cc;
+    background: #20ff6354;
 }
 
 .navbar:hover .menu li:nth-child(1) {
